test/js/node/test/parallel/test-stream-readable-to-web-termination.js.log.txt
1 | (function () {"use strict";
              ^
TypeError: ReadableStreamDefaultController is not in a state where it can be closed
      at internal:webstreams/adapters:839:39
      at node:util:236:18
      at internal:streams/end-of-stream:88:19
      at emit (node:events:83:48)
      at emitCloseNT (internal:streams/destroy:112:21)
854 |     start(c) {
855 |       controller = c;
856 |     },
857 |     pull() {
858 |       streamReadable.resume();
859 |     cancel(reason) {
                ^
ReferenceError: Can't find variable: destroy
      at cancel (internal:webstreams/adapters:859:11)
      at emit (node:events:83:48)
      at emitCloseNT (internal:streams/destroy:112:21)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
